2003-05-01  Abel Cheung  <maddog@linux.org.hk>

	* image.c(get_sample_html): Fix typo.
	* GNOME_GtkHTML_Editor.server.in.in.h,
	  gtkhtml-editor-properties.glade.h,
	  GNOME_GtkHTML_Editor.xml.in.h:
	  Remove temp files generated by intltool.

2003-04-29  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (CLEANFILES): add missing files to CLEANFILES to
	make automake-1.7.3 happy.

	* menubar.c: remove unused include.

2003-04-17  Radek Doulik  <rodo@ximian.com>

	* html-stream-mem.c: derive from BonoboObject instead of
	BonoboStreamMem

2003-04-14  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (SPELL_IDL_GENERATED_C): remove spell.h that was
	accidentally still there.

2003-04-14  Radek Doulik  <rodo@ximian.com>

	* test-html-editor-control.c (app_delete_cb): call quit
	(container_create): don't connect to window destroy signal, it's
	no more needed + was calling unref on uic which we didn't have
	reference to
	(container_create): remove control frame activate call - I guess
	it was committed by mistake, right Larry? after I removed this
	call things started to work again - menu items work and no warning
	on exit

2003-04-09  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (editor_init_painters): use the gdk painter
	directly rather than the prop 
	(editor_set_format): copy the default fonts back since they may
	have changed dues to style changes.
	(editor_init_painters): call ensure_style to make sure the colors
	and fonts are valid.

2003-04-09  Radek Doulik  <rodo@ximian.com>

	* spell.c: use html_engine_get_language

	* popup.c: use html_engine_get_language

	* editor-control-factory.c: removed static from struct declaration
	(to quiet compiler)

2003-04-04  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (html_button_pressed): revert the
	previous change

2003-04-04  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c (html_button_pressed): always do the
	editor popup and never disable the selection.  This matches how